@@ -12,7 +12,7 @@
 
 <meta name="author" content="Lindsay V. Clark, University of Illinois, Urbana-Champaign" />
 
-<meta name="date" content="2018-12-11" />
+<meta name="date" content="2019-01-03" />
 
 <title>polyRAD Tutorial</title>
 
@@ -302,7 +302,7 @@ code > span.fu { color: #900; font-weight: bold; }  code > span.er { color: #a61
 
 <h1 class="title toc-ignore">polyRAD Tutorial</h1>
 <h4 class="author"><em>Lindsay V. Clark, University of Illinois, Urbana-Champaign</em></h4>
-<h4 class="date"><em>11 December 2018</em></h4>
+<h4 class="date"><em>03 January 2019</em></h4>
 
 
 <div id="TOC">
@@ -356,6 +356,7 @@ code > span.fu { color: #900; font-weight: bold; }  code > span.er { color: #a61
 <li><code>SubsetByLocus</code></li>
 <li><code>SplitByChromosome</code></li>
 <li><code>MergeRareHaplotypes</code></li>
+<li><code>MergeTaxaDepth</code></li>
 <li><code>RemoveMonomorphicLoci</code></li>
 <li><code>RemoveHighDepthLoci</code></li>
 <li><code>EstimateContaminationRate</code></li>
