@@ -2,6 +2,8 @@
 
 A plot method has been added for RADdata objects.
 
+The MergeTaxaDepth utility function has been added.
+
 ## Changes in v1.0 ##
 
 Genotype likelihoods are now estimated under a beta-binomial distribution 
